# MPHY0054_lab

cw2/: README.md
cw2/cw2q2/: CMakeLists.txt  package.xml
cw2/cw2q2/bags/data_ros2/: data_ros2.db3  metadata.yaml
cw2/cw2q2/launch/: cw2q2.launch.py
cw2/cw2q2/src/: cw2q2_node.py  youbot_kdl_utils.py
cw2/cw2q4/: CMakeLists.txt  package.xml
cw2/cw2q4/launch/: cw2q4_validate.launch.py
cw2/cw2q4/resource/: cw2q4
cw2/cw2q4/scripts/: cw2q4_validate.py
cw2/cw2q4/src/cw2q4/: iiwa14DynBase.py  iiwa14DynKDL.py  iiwa14DynStudent.py  urdf_kdl_utils.py
cw2/cw2q7/: CMakeLists.txt  hardware_interface_plugins.xml  package.xml  setup.py
cw2/cw2q7/bag/data_ros2/: data_ros2.db3  metadata.yaml
cw2/cw2q7/config/: iiwa14.rviz
cw2/cw2q7/launch/: cw2q7.launch.py
cw2/cw2q7/urdf/: iiwa_cw2.xacro
cw2/youbot_trail_rviz_cw2/: CMakeLists.txt  package.xml
cw2/youbot_trail_rviz_cw2/launch/: trail.launch.py
cw2/youbot_trail_rviz_cw2/src/: youbot_trail_node.py
lab10/: README.md  read_bag.py
lab10_solution/: README.md  read_bag.py
youbot_simulator/launch/: youbot_controller.launch.py
