<?xml version="1.0"?>
<package format="3">
  <name>cw2q4</name>
  <version>0.0.0</version>
  <description>ROS2 Foxy coursework 2 question 4.</description>

  <maintainer email="kpach@todo.todo">kpach</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>ament_index_python</depend>
  <depend>geometry_msgs</depend>
  <depend>python3-numpy</depend>
  <depend>python3-pykdl</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>trajectory_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
