<?xml version="1.0"?>
<package format="3">
  <name>youbot_trail_rviz_cw2</name>
  <version>0.0.0</version>
  <description>Marker visualisation utilities for CW2 on ROS2 Foxy.</description>

  <maintainer email="kpach@todo.todo">kpach</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ament_index_python</depend>
  <depend>python3-numpy</depend>
  <depend>rclpy</depend>
  <depend>visualization_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>gazebo_msgs</depend>

  <exec_depend>cw2q2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
